--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -11,7 +11,17 @@ body {
 	margin: 0;
 }
 
-canvas {
+#canvas {
 	background: black;
 	display: block;
+}
+
+#status {
+	position: absolute;
+	left: 10px;
+	top: 10px;
+	
+	font-family: sans-serif;
+	font-size: 12px;
+	color: white;
 }
