--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -20,7 +20,16 @@ body {
 	position: absolute;
 	left: 10px;
 	top: 10px;
-	
+}
+
+#hints {
+	position: absolute;
+	right: 10px;
+	top: 10px;
+}
+
+#status,
+#hints {
 	font-family: sans-serif;
 	font-size: 12px;
 	color: white;
