--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -28,9 +28,36 @@ body {
 	top: 10px;
 }
 
-#status,
-#hints {
-	font-family: sans-serif;
+body > * {
+	font-family: Verdana,sans-serif;
 	font-size: 12px;
 	color: white;
+}
+
+#splash {
+	position: absolute;
+	top: 100px;
+	width: 100%;
+	
+	text-align: center;
+	color: white;
+	font-size: 16px;
+}
+
+#splash h1,
+#progress {
+	font-size: 30px;
+	font-weight: bold;
+}
+
+body.error,
+body.error #canvas {
+	background: #800000;
+}
+
+a,
+a:visited,
+a:hover {
+	color: white;
+	text-decoration: underline;
 }
