--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -61,3 +61,15 @@ a:hover {
 	color: white;
 	text-decoration: underline;
 }
+
+#keyboard-input-dummy {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 50px;
+	height: 50px;
+	background: transparent;
+	border: none;
+	cursor: default;
+	color: transparent;
+}
