--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -62,14 +62,22 @@ a:hover {
 	text-decoration: underline;
 }
 
-#keyboard-input-dummy {
+#buttons {
 	position: absolute;
 	bottom: 0;
 	left: 0;
-	width: 50px;
-	height: 50px;
-	background: transparent;
-	border: none;
-	cursor: default;
-	color: transparent;
+	width: 100%;
+	height: 60px;
+}
+
+#buttons button {
+	width: 40px;
+	height: 40px;
+	margin-left: 20px;
+	
+	border: 0;
+	background: white;
+	
+	font-size: 20px;
+	font-weight: bold;
 }
